After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 709507 - deinterlace: Segfault in handling of planar YUV video formats
deinterlace: Segfault in handling of planar YUV video formats
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.2.0
Other Linux
: Normal normal
: 1.2.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-10-06 13:19 UTC by Christoph Reiter (lazka)
Modified: 2013-10-10 10:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
backtrace (17.84 KB, text/plain)
2013-10-06 13:19 UTC, Christoph Reiter (lazka)
Details

Description Christoph Reiter (lazka) 2013-10-06 13:19:12 UTC
Created attachment 256572 [details]
backtrace

source file is h264/mp3 in mp4.

pipepline: gst-launch-1.0 filesrc location=4.mp4 ! decodebin ! deinterlace mode=interlaced method=tomsmocomp ! fakesink

See attachment
Comment 1 Christoph Reiter (lazka) 2013-10-06 13:38:57 UTC
The problem seems to be the video format:

"/GstPipeline:pipeline0/GstDecodeBin:decodebin0/avdec_h264:avdec_h264-0.GstPad:src: caps = video/x-raw, format=(string)I420, width=(int)720, height=(int)576, pixel-aspect-ratio=(fraction)1/1, interlace-mode=(string)progressive, colorimetry=(string)bt601, framerate=(fraction)25000/1007"

changing the pipeline to the following makes it work:

gst-launch-1.0 filesrc location=4.mp4 ! decodebin ! videoconvert ! video/x-raw,format=YUY2 ! deinterlace mode=interlaced method=tomsmocomp ! autovideosink
Comment 2 Sebastian Dröge (slomo) 2013-10-07 10:36:55 UTC
Also fails with this even simpler testcase:
> gst-launch-1.0 videotestsrc ! "video/x-raw,format=I420,width=720,height=576" ! deinterlace mode=interlaced method=tomsmocomp ! fakesink
Comment 3 Sebastian Dröge (slomo) 2013-10-07 10:39:13 UTC
Program received signal SIGSEGV, Segmentation fault.

Thread 140737308645120 (LWP 25094)

  • #1 deinterlace_frame_di_greedyh_planar_plane
    at tvtime/greedyh.c line 863
  • #0 __memcpy_ssse3_back
    at ../sysdeps/x86_64/multiarch/memcpy-ssse3-back.S line 218
  • #1 deinterlace_frame_di_greedyh_planar_plane
    at tvtime/greedyh.c line 863
  • #2 deinterlace_frame_di_greedyh_planar
    at tvtime/greedyh.c line 939
  • #3 gst_deinterlace_method_deinterlace_frame
    at gstdeinterlacemethod.c line 199
  • #4 gst_deinterlace_output_frame
    at gstdeinterlace.c line 1796
  • #5 gst_deinterlace_chain

Comment 4 Sebastian Dröge (slomo) 2013-10-07 10:55:59 UTC
Will backport to 1.2 later.

commit a5bf9f24c9b4f800c305f65919cf3c829780993c
Author: Sebastian Dröge <slomo@circular-chaos.org>
Date:   Mon Oct 7 12:54:11 2013 +0200

    deinterlace: Fix handling of planar video formats in greedyh method
    
    https://bugzilla.gnome.org/show_bug.cgi?id=709507