deinterlace: Fix handling of planar video formats in greedyh method

https://bugzilla.gnome.org/show_bug.cgi?id=709507